<resources>
    <string name="app_name">Climb Book</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="climbing_areas_title">Climbing Areas</string>
    <string name="routes_title">Routes:</string>

    <!-- Details Page Labels -->
    <string name="areaLabel">Climbing Area</string>
    <string name="gpsLabel">GPS Coordinates</string>
    <string name="difficultyLabel">Difficulty</string>
    <string name="numAnchorsLabel">Number Anchors</string>

    <string name="addAnchorButton">Add Anchor</string>
    <string name="anchorEntryError">Please enter text into both fields</string>
    <string name="anchorLabel">Anchors:</string>
    <string name="areaIdLabel">Area ID</string>
    <string name="areaNameLabel">Area Name</string>
    <string name="betaLabel">Beta</string>
    <string name="cancel">Cancel</string>
    <string name="couldNotLoadRoutesMessage">Could not load routes</string>
    <string name="couldNotSaveRouteMessage">Could not save route</string>
    <string name="deleteAnchorConfirmation">Do you really want to delete this anchor?</string>
    <string name="deleteButtonLabel">Delete</string>
    <string name="deleteConfirmationMessage">Do you really want to delete this route?</string>
    <string name="deletingRouteMessage">Deleting Route</string>
    <string name="difficultyHint">5-??</string>
    <string name="editAnchor">Edit Anchor</string>
    <string name="editLabel">Edit</string>
    <string name="genericErrorMessage">Something went wrong</string>
    <string name="gpsCoordinatesLabel">GPS Coordinates</string>
    <string name="newArea">New Area</string>
    <string name="newRouteSuccessMessage">New Route Successfully Saved</string>
    <string name="no">No</string>
    <string name="noLoadSavedDataMessage">Could not load saved data</string>
    <string name="noSavedDataMessage">Could Not Load Saved Data. Go Ahead! Add some!</string>
    <string name="pleaseSaveRouteFirstMessage">Please save route details before adding anchors</string>
    <string name="routeDeletedMessage">Route Deleted</string>
    <string name="routeTitlePrompt">Route Title</string>
    <string name="save">Save</string>
    <string name="saveButtonLabel">Save</string>
    <string name="saveSuccess">New Data Successfully Saved</string>
    <string name="trailHeadNameLabel">Trail Head</string>
    <string name="yes">Yes</string>
    <string name="couldNotLoadAreaMessage">Could not load area</string>
</resources>
