<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="RDC" type="com.example.mattghall.finalproject.RouteDetailsClass"/>
        <variable name="DataFile" type="String"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/routeTitle"
            style="@style/DetailsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{RDC.name}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/areaTitleLabel"
                style="@style/DetailsLabels"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/areaLabel" />
            <TextView
                android:id="@+id/routeAreaTextView"
                style="@style/DetailsValue"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@{RDC.area}" />
            <Spinner
                android:id="@+id/routeAreaSpinner"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center_vertical|start" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:visibility="gone"
                android:id="@+id/gpsLabel"
                style="@style/DetailsLabels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gpsLabel" />
            <EditText
                android:visibility="gone"
                android:id="@+id/routeGPS"
                style="@style/DetailsValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{RDC.gps}" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/difficultyLabel"
                style="@style/DetailsLabels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/difficultyLabel" />
            <EditText
                android:id="@+id/routeDifficulty"
                style="@style/DetailsValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{RDC.difficulty}" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/anchorsLabel"
                style="@style/DetailsLabels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anchorLabel" />
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/addAnchorButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addAnchorButton" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ListView
                android:id="@+id/anchors_listview"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="350dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:text="@string/saveButtonLabel" />
            <Button
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:text="@string/deleteButtonLabel" />
        </LinearLayout>
    </LinearLayout>
</layout>