<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="areaData"
            type="com.example.mattghall.finalproject.AreaClass"/>
    </data>
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/content_scrolling"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        tools:context="com.example.mattghall.finalproject.Fragment_RouteList"
        tools:showIn="@layout/activity_main">
        <!-- Route Details -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/AreaLabels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/areaNameLabel" />
            <TextView
                style="@style/AreaValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{areaData.name}" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/AreaLabels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/areaIdLabel" />
            <TextView
                style="@style/AreaValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{areaData.id}" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/AreaLabels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trailHeadNameLabel" />
            <TextView
                style="@style/AreaValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{areaData.trailHeadName}" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:visibility="gone"
                style="@style/AreaLabels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gpsCoordinatesLabel" />
            <TextView
                android:visibility="gone"
                style="@style/AreaValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{areaData.trailHeadGPS}" />
        </LinearLayout>
        <TextView
            style="@style/AreaLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routes_title" />
        <ListView
            android:id="@+id/routes_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ListView>
    </LinearLayout>
</layout>